Bug 126833 - A table row is wrongly formatted when inserting a new row) after a table insert undo/redo
Summary: A table row is wrongly formatted when inserting a new row) after a table inse...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.0.4 release
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.4.0 target:6.3.3
Keywords: bibisectRequest, needUITest, regression
Depends on:
Blocks:
 
Reported: 2019-08-11 19:04 UTC by Telesto
Modified: 2019-09-18 09:34 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2019-08-11 19:04:38 UTC
Description:
A table row is wrongly formatted when pressing tab (to add a new row) after a table insert redo 

Steps to Reproduce:
1. Open Writer
2. CTRL+F12
3. Choose Style: Box List Blue
4. Press add row below in the table toolbar a few times (say 4). White gray White
5. Undo everything (Hold CTRL+Z)
6. CTRL+Y (once) 
7. Press add row below in the table toolbar a few times -> Only blue items

Actual Results:
Only blue rows

Expected Results:
Gray/white rows


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.3.0.4 (x86)
Build ID: 057fc023c990d676a43019934386b85b21a9ee99
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 1 IM 2019-08-11 20:37:31 UTC
Thank you for reporting the bug. I can confirm that the bug is present in:

Version: 6.4.0.0.alpha0+ (x86)
Build ID: 5c30c20101f72d973ff28c228f755e635cad14d5
CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win; 
Locale: pl-PL (pl_PL); UI-Language: en-US
Calc: threaded
Comment 2 Xisco Faulí 2019-08-12 13:13:24 UTC
Not reproducible in

Version: 6.1.0.0.alpha1+
Build ID: 3a801799536e6870f2fb111b1cc00b9575a35a39
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group
Comment 3 Jim Raykowski 2019-09-09 06:45:36 UTC
This was caused by the fix for bug 123516.

Here is a patch to make the undo/redo table auto format work again.

https://gerrit.libreoffice.org/#/c/78770/
Comment 4 Commit Notification 2019-09-11 22:21:30 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/1d5b89eccdccb3090b5503a60f829c54c077f328%5E%21

tdf#126833 fix table auto format undo/redo

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2019-09-17 08:12:03 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: c56bf1479cc71d1a2b0639f6383e90c1f7e3655b
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Jim, thanks for fixing this issue!
Comment 6 Timur 2019-09-17 08:26:51 UTC
Looks like Xisco cherry picked for 6.3
https://gerrit.libreoffice.org/#/c/79045/1
Thank you Jim and Xisco :)
Comment 7 Commit Notification 2019-09-18 09:34:56 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/5afcf42108a522841440f795e4a74d3acea3755f

tdf#126833 fix table auto format undo/redo

It will be available in 6.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.