tdf#126833 fix table auto format undo/redo

Fixes regression caused by fix for tdf#123516

Change-Id: If7b6bf9cba30085585fc495898f3dfb308197495
Reviewed-on: https://gerrit.libreoffice.org/78770
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>